// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
{
  "data": {
    "p_name": "NewProduct02",
    "price": 750,
  },
  "message": "Product created successfully!",
  "status": "success",
  "status_code": 200,
}
`;

exports[`api test suite tests /get/:id endpoints 1`] = `
{
  "data": {
    "created_at": "2023-03-16T08:34:34.000Z",
    "id": 254,
    "p_name": "NewProduct02",
    "price": "510",
    "status": 1,
    "updated_at": "2023-03-16T08:34:34.000Z",
  },
  "message": "Product fetched successfully!",
  "status": "success",
  "status_code": 200,
}
`;

exports[`api test suite tests /get-all endpoints 1`] = `
{
  "data": [
    {
      "created_at": "2023-03-14T14:17:29.000Z",
      "id": 124,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-14T14:17:55.000Z",
      "id": 125,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-14T14:18:39.000Z",
      "id": 126,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-15T10:34:23.000Z",
      "id": 179,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-16T08:34:34.000Z",
      "id": 254,
      "p_name": "NewProduct02",
      "price": "510",
      "status": 1,
      "updated_at": "2023-03-16T08:34:34.000Z",
    },
  ],
  "message": "Product fetched successfully!",
  "status": "success",
  "status_code": 200,
}
`;

exports[`api test suite tests /updateProduct/:id endpoints 1`] = `
{
  "data": {
    "id": "254",
    "p_name": "ProductNameUpdated",
    "price": 510,
    "updated_at": "2023-03-16 08:34:34",
  },
  "message": "Product updated successfully!",
  "status": "success",
  "status_code": 200,
}
`;
